# Better-Yuu-Backend

./: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: deploy-to-cloud-run.yml
app/: main.py
app/api/v1/endpoints/: auth.py  dreams.py
app/core/: config.py  security.py
app/db/: db_client.py  session.py
app/domains/ai_engine/: services.py
app/domains/dreams/: models.py  schemas.py  services.py
app/domains/users/: models.py  schemas.py  services.py
app/helpers/: serialize.py
app/models/: user.py
