[project]
name = "better-yuu-backend"
version = "0.1.0"
description = "Be better"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.95.0",
    "httpx-oauth>=0.16.1",
    "motor>=3.1.1",
    "odmantic>=0.4.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.3.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.22.0",
]
